[package]
name = "restless"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.4"
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-std = "1.10"
clap = "4.5.30"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

